feat: implement user registration and login functionality with custom success handler for different redirection based by role; templates just stubs